--- a/pom.xml
+++ b/pom.xml
@@ -16,33 +16,23 @@
     <module>jubula-target</module>
     <module>jubula-tests</module>
   </modules>
-  <repositories>
+  <!--repositories>
     <repository>
       <id>Jubula nightly + patch fo 482517</id>
-      <!--url>file://${jubula.installation.dir}/development/api/m2-repo</url-->
       <url>http://download.elexis.info/jubula/bug_482517/</url>
       <layout>p2</layout>
     </repository>
     <repository>
       <id>Jubula-Mars</id>
       <url>http://download.eclipse.org/jubula/release/mars</url>
-      <!--
-      nightly had problems with org.junig
-      <url>http://download.eclipse.org/jubula/nightly/repo</url>
-      luna does not work
-      <url>http://download.eclipse.org/jubula/release/luna/</url>
-      -->
       <layout>p2</layout>
     </repository>
     <repository>
       <id>Eclipse-Release</id>
       <url>http://download.eclipse.org/releases/mars</url>
-      <!--
-      <url>http://download.eclipse.org/releases/luna</url>
-      -->
       <layout>p2</layout>
     </repository>
-  </repositories>
+  </repositories-->
   <build>
     <plugins>
       <plugin>
@@ -121,13 +111,13 @@
             between Tycho and Eclipse. -->
               <!-- we cannot use a classifier here, or mvn compile would file in
                 any other project!! classifier>elexis-3</classifier -->
-          <!--target>
+          <target>
             <artifact>
               <groupId>elexis-jubula</groupId>
-              <artifactId>luna</artifactId>
+              <artifactId>jubula-target</artifactId>
               <version>1.0.0-SNAPSHOT</version>
             </artifact>
-          </target-->
+          </target>
           <environments>
             <environment>
               <os>linux</os>
