--- a/jubula-tests/pom.xml
+++ b/jubula-tests/pom.xml
@@ -10,4 +10,5 @@
     <artifactId>root</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+  <packaging>eclipse-test-plugin</packaging>
 </project>
