--- a/jubula-tests/build.properties
+++ b/jubula-tests/build.properties
@@ -1,4 +1,7 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               logback.xml,\
+               om.properties,\
+               logback-test.xml
