--- a/definitions/Screenshot.yaml
+++ b/definitions/Screenshot.yaml
@@ -2,3 +2,4 @@
 :exe_name:    Elexis3
 :test_to_run: test=ch.ngiger.jubula.testsuites.Screenshot
 :agent_port:  6333
+:jvm_args:    '-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=8000'
