Smoketest creates a patient

--- a/jubula-tests/build.properties
+++ b/jubula-tests/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                logback.xml,\
                om.properties,\
-               logback-test.xml
+               logback-test.xml,\
+               rsc/
