--- a/jubula-tests/pom.xml
+++ b/jubula-tests/pom.xml
@@ -18,7 +18,8 @@
         <artifactId>tycho-surefire-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
-          <argLine>-Dtest=ch.ngiger.jubula.testsuites.Screenshot</argLine>
+          <skipTests>false</skipTests>
+          <test>ch.ngiger.jubula.testsuites.Screenshot</test>
           <useUIThread>false</useUIThread>
           <useUIHarness>false</useUIHarness>
           <showEclipseLog>true</showEclipseLog>
