--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
   <properties>
+  <!-- Native product launchers for MacOSX can only be built against Eclipse Mars or newer
+      when tycho >= 0.23 is installed
+      -->
     <tycho-version>0.22.0</tycho-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <tycho-extras.version>${tycho-version}</tycho-extras.version>
