--- a/definitions/Screenshot.yaml
+++ b/definitions/Screenshot.yaml
@@ -1,5 +1,5 @@
 ---
 :exe_name:    Elexis3
-:test_to_run: test=ch.ngiger.jubula.testsuites.Screenshot
+:test_to_run: Screenshot
 :agent_port:  6333
 :jvm_args:    '-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=8000'
