--- a/definitions/SuiteVisitAllViews.yaml
+++ b/definitions/SuiteVisitAllViews.yaml
@@ -1,4 +1,4 @@
 ---
 :exe_name:    Elexis3
-:test_to_run: test=ch.ngiger.jubula.testsuites.SuiteVisitAllViews
+:test_to_run: SuiteVisitAllViews
 :agent_port:  6333
