--- a/jubula-tests/pom.xml
+++ b/jubula-tests/pom.xml
@@ -2,6 +2,9 @@
 <project
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+   <properties>
+    <test_to_run>Screenshot</test_to_run>
+  </properties>
   <modelVersion>4.0.0</modelVersion>
   <version>0.1.0-SNAPSHOT</version>
   <artifactId>ch.ngiger.elexis.jubula.tests</artifactId>
@@ -19,7 +22,7 @@
         <version>${tycho-version}</version>
         <configuration>
           <skipTests>false</skipTests>
-          <test>ch.ngiger.jubula.testsuites.Screenshot</test>
+          <test>${test_to_run}</test>
           <useUIThread>false</useUIThread>
           <useUIHarness>false</useUIHarness>
           <showEclipseLog>true</showEclipseLog>
