--- a/wheezy/Dockerfile
+++ b/wheezy/Dockerfile
@@ -11,32 +11,20 @@ RUN apt-get update && \
     icedove \
     libxext-dev libxrender-dev libxtst-dev wget unzip \
     libwebkitgtk-1.0-0 \
-    xvfb xterm x11-xserver-utils x11-apps awesome
+    xvfb xterm x11-xserver-utils x11-apps \
+    locales-all ruby zip maven htop lsof strace sudo vim \
+    fluxbox xinit metacity vnc4server xvnc4viewer
+
 # x11-apps: to be able to take a screen-shot inside the container using xwd  -root -out screen.xwd
 # must be converted to png using "convert screen.xwd screen.png" (on host)
+# also some tools like lsof htop to debug problems
 
 # Install Oracle Java-8 and accept automatically its license
 RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | tee /etc/apt/sources.list.d/webupd8team-java.list && \
     apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
     echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
     apt-get update && \
-    apt-get install -y oracle-java8-installer locales-all ruby zip
-
-# cleanup (minimizes size of generated image)
-RUN apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /tmp/*
-
-# install some debugging tools
-RUN apt-get update && \
-    apt-get install -y maven htop lsof strace sudo vim
-# http://support.xored.com/support/solutions/articles/3000028645
-RUN export DEBIAN_FRONTEND=noninteractive && \
-    apt-get update && \
-    apt-get install -y console-setup
-RUN apt-get install -y git fluxbox xinit metacity vnc4server xvnc4viewer
-
-RUN apt-get remove --purge -y awesome
+    apt-get install -y oracle-java8-installer \
 
 RUN useradd --uid 1200 --user-group --create-home --shell /bin/bash elexis && \
     echo "elexis ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/elexis && \
@@ -53,4 +41,10 @@ VOLUME /home/elexis/.m2
 EXPOSE 8000
 CMD /bin/bash
 WORKDIR /home/elexis
+
+# cleanup (minimizes size of generated image)
+RUN apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/*
+
 
