--- a/jubula-tests/pom.xml
+++ b/jubula-tests/pom.xml
@@ -4,6 +4,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <properties>
     <test_to_run>Suite*</test_to_run>
+    <DISPLAY>:0</DISPLAY>
   </properties>
   <modelVersion>4.0.0</modelVersion>
   <version>0.1.0-SNAPSHOT</version>
@@ -21,6 +22,9 @@
         <artifactId>tycho-surefire-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
+          <environmentVariables>
+            <DISPLAY>${DISPLAY}</DISPLAY>
+          </environmentVariables>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <skipTests>false</skipTests>
           <test>${test_to_run}</test>
