New jenkins slave

--- a/jenkins-slave/Dockerfile
+++ b/jenkins-slave/Dockerfile
@@ -6,14 +6,14 @@ MAINTAINER Niklaus Giger "elexis.giger@member.fsf.org"
 # iceweasel # to be able to display web pages
 # icedove # to be able to send-email
 RUN apt-get update && \
-    apt-get install -y abiword \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y abiword \
     iceweasel \
     icedove \
     libxext-dev libxrender-dev libxtst-dev wget unzip \
     libwebkitgtk-1.0-0 \
     xvfb xterm x11-xserver-utils x11-apps \
     locales-all ruby zip maven htop lsof strace sudo vim \
-    fluxbox xinit metacity vnc4server xvnc4viewer
+    fluxbox xinit metacity vnc4server xvnc4viewer curl git bundler
 
 # x11-apps: to be able to take a screen-shot inside the container using xwd  -root -out screen.xwd
 # must be converted to png using "convert screen.xwd screen.png" (on host)
@@ -24,27 +24,26 @@ RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | te
     apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
     echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
     apt-get update && \
-    apt-get install -y oracle-java8-installer \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y oracle-java8-installer
 
+ENV JENKINS_REMOTING_VERSION 2.52
+ENV HOME /home/jenkins
 RUN useradd --uid 1200 --user-group --create-home --shell /bin/bash elexis && \
     echo "elexis ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/elexis && \
     chmod 0440 /etc/sudoers.d/elexis && \
-    mkdir -p elexis /home/elexis/work /home/elexis/results
-USER elexis
-# ADD Gemfile /home/elexis/Gemfile
-# RUN gem install --no-ri --no-rdoc bundler
-# RUN cd /home/elexis && sudo -Hu elexis bundle install --without debugger
-VOLUME /home/elexis
-# we want to allow storing the maven repository in a different directory to speed things up!
-VOLUME /home/elexis/.m2
-# expose a debug port for Java
-EXPOSE 8000
-CMD /bin/bash
-WORKDIR /home/elexis
+    mkdir -p elexis /home/elexis/work /home/elexis/results && \
+    useradd -c "Jenkins user" -d $HOME -m jenkins && \
+    curl --create-dirs -sSLo /usr/share/jenkins/remoting-$JENKINS_REMOTING_VERSION.jar \
+       http://repo.jenkins-ci.org/public/org/jenkins-ci/main/remoting/$JENKINS_REMOTING_VERSION/remoting-$JENKINS_REMOTING_VERSION.jar &&\
+    chmod 755 /usr/share/jenkins
 
 # cleanup (minimizes size of generated image)
-RUN apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm -rf /tmp/*
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y git bundler
+# RUN apt-get clean && \
+#     rm -rf /var/lib/apt/lists/* && \
+#     rm -rf /tmp/*
 
-
+COPY jenkins-slave.sh /usr/local/bin/jenkins-slave.sh
+USER jenkins
+WORKDIR /home/jenkins
+ENTRYPOINT ["/usr/local/bin/jenkins-slave.sh"]
