--- a/scripts/defaults.yaml
+++ b/scripts/defaults.yaml
@@ -6,7 +6,14 @@
 :director_latest: http://mirror.switch.ch/eclipse/tools/buckminster/products/director_latest.zip
 :elexis_fsf:
    # :full_zip_url: http://download.elexis.info/elexis.3.core/3.0.0/ch.elexis.core.application.ElexisApp-linux.gtk.x86_64.zip
-  :full_zip_url: https://srv.elexis.info/jenkins/view/3.0/job/Elexis-3.0-Core/lastSuccessfulBuild/artifact/ch.elexis.core.p2site/target/products/ch.elexis.core.application.ElexisApp-linux.gtk.x86_64.zip
+  snapshot:
+    :full_zip_url: http://download.elexis.info/elexis.3.core/snapshot/products/ch.elexis.core.application.ElexisApp-linux.gtk.x86_64.zip
+  beta:
+    :full_zip_url: http://download.elexis.info/elexis.3.core/beta/products/ch.elexis.core.application.ElexisApp-linux.gtk.x86_64.zip
+  prerelease:
+    :full_zip_url: http://download.elexis.info/elexis.3.core/prerelease/products/ch.elexis.core.application.ElexisApp-linux.gtk.x86_64.zip
+  release:
+    :full_zip_url: http://download.elexis.info/elexis.3.core/release/products/ch.elexis.core.application.ElexisApp-linux.gtk.x86_64.zip
   :features_2_install:
       http://download.elexis.info/elexis.3.core/snapshot:
         - ch.elexis.core.application.feature.feature.group
