Dump always the database to a file. Use docker-compose with mysql and postgresql

--- a/definitions/Screenshot.yaml
+++ b/definitions/Screenshot.yaml
@@ -2,3 +2,6 @@
 :exe_name:    Elexis3
 :test_to_run: Screenshot
 :agent_port:  6305
+:environment:
+  db_connection: 'jdbc:mysql://localhost/elexistest'
+  db_load_script: simpel.sql
