--- a/definitions/SuiteVisitAllPerspectives.yaml
+++ b/definitions/SuiteVisitAllPerspectives.yaml
@@ -2,6 +2,6 @@
 :exe_name:    Elexis3
 :test_to_run: SuiteVisitAllPerspectives
 :agent_port:  6302
-# :environment:
-#   db_connection: 'jdbc:postgresql://localhost/elexistest'
-#   db_load_script: simpel.sql
+:environment:
+  db_connection: 'jdbc:postgresql://localhost/elexistest'
+  db_load_script: simpel.sql
