--- a/definitions/SuiteVisitAllPerspectives.yaml
+++ b/definitions/SuiteVisitAllPerspectives.yaml
@@ -3,5 +3,5 @@
 :test_to_run: SuiteVisitAllPerspectives
 :agent_port:  6302
 :environment:
-  db_connection: 'jdbc:postgresql://localhost/elexistest'
+  db_connection: 'jdbc:postgresql://postgres/elexistest'
   db_load_script: simpel.sql
