Make docker image smaller

--- a/wheezy/Dockerfile
+++ b/wheezy/Dockerfile
@@ -5,29 +5,24 @@ MAINTAINER Niklaus Giger "niklaus.giger@member.fsf.org"
 #    apt-get install -y libreoffice-writer # to be able to use ODF documents
 # iceweasel # to be able to display web pages
 # icedove # to be able to send-email
+RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | tee /etc/apt/sources.list.d/webupd8team-java.list && \
+    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
+    echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y abiword \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends abiword \
     iceweasel \
     icedove \
     libxext-dev libxrender-dev libxtst-dev wget unzip \
     libwebkitgtk-1.0-0 \
     xvfb xterm x11-xserver-utils x11-apps \
     locales-all ruby zip maven htop lsof strace sudo vim \
-    fluxbox xinit metacity vnc4server xvnc4viewer curl git bundler
+    fluxbox xinit metacity vnc4server xvnc4viewer curl git bundler \
+    mysql-client-5.5 postgresql-client-9.1 oracle-java8-installer && \
+    apt-get clean; rm -rf /var/lib/apt/lists/*
 
 # x11-apps: to be able to take a screen-shot inside the container using xwd  -root -out screen.xwd
 # must be converted to png using "convert screen.xwd screen.png" (on host)
 # also some tools like lsof htop to debug problems
-
-# Install Oracle Java-8 and accept automatically its license
-RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | tee /etc/apt/sources.list.d/webupd8team-java.list && \
-    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
-    echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
-    apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y oracle-java8-installer
-
-RUN apt-get update && \
-  DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-client-5.5 postgresql-client-9.1
 
 RUN useradd --uid 1000 --user-group --create-home --shell /bin/bash dummy
 RUN useradd --uid 1200 --user-group --create-home --shell /bin/bash elexis && \
@@ -39,7 +34,7 @@ RUN useradd --uid 1200 --user-group --create-home --shell /bin/bash elexis && \
 # Configure the main working directory. This is the base
 # directory used in any further RUN, COPY, and ENTRYPOINT
 # commands.
-RUN mkdir -p /app /tmp/.X11-unix/ && chmod 1777 /tmp/.X11-unix/
+RUN mkdir -p /app /tmp/.X11-unix/ && chmod 1777 /tmp/.X11-unix/  /var/lib/apt/lists/
 WORKDIR /app
 COPY assets/* /app/
 USER elexis
