--- a/wheezy/mysql/lowercase.cnf
+++ b/wheezy/mysql/lowercase.cnf
@@ -1,3 +1,4 @@
+# This file must not be world readable or the mysqld will simply ignore it!
 [mysqld]
 lower_case_table_names=1
 character-set-server=utf8
