--- a/definitions/SuiteVisitAllViews.yaml
+++ b/definitions/SuiteVisitAllViews.yaml
@@ -3,5 +3,7 @@
 :test_to_run: SuiteVisitAllViews
 :agent_port:  6304
 :environment:
-  db_connection: 'jdbc:mysql://mysql/elexistest'
-  db_load_script: simpel.sql
+# mysql läuft unter 3.1.0 nicht, da Dumpd für 3.2.0
+  # db_connection: 'jdbc:mysql://mysql/elexistest'
+  # db_load_script: simpel.sql
+  # aut_run_from_scratch: true
