Run several jenkins in parallel. Speed via mounting .git

--- a/wheezy/docker-compose.yml
+++ b/wheezy/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       - ${PWD}/results:/home/elexis/results
       - ${PWD}/container_home_m2:/home/elexis/.m2
       - ${PWD}/container_home:/home/elexis
+      - ${PWD}/.git:/home/elexis/.git
       # File in this directory must not be world readable or the mysqld will simply ignore it!
       - ${PWD}/wheezy/mysql:/etc/mysql/conf.d
     #   - /tmp/.X11-unix:/tmp/.X11-unix # für USE_X11
