Support Medelexis. Small improvements

--- a/wheezy/Dockerfile
+++ b/wheezy/Dockerfile
@@ -17,16 +17,18 @@ RUN apt-get update && \
     xvfb xterm x11-xserver-utils x11-apps \
     locales-all ruby zip maven htop lsof strace sudo vim \
     fluxbox xinit metacity vnc4server xvnc4viewer curl git bundler \
-    mysql-client-5.5 postgresql-client-9.1 oracle-java8-installer && \
+    mysql-client-5.5 postgresql-client-9.1 oracle-java8-installer \
+    wmctrl libreoffice-writer scrot xdotool && \
     apt-get clean; rm -rf /var/lib/apt/lists/*
 
 # x11-apps: to be able to take a screen-shot inside the container using xwd  -root -out screen.xwd
 # must be converted to png using "convert screen.xwd screen.png" (on host)
 # also some tools like lsof htop to debug problems
 # we want wmctrl to maximize Elexis
-
+# xdotool to send some command to Elexis
+# scrot to create screenshots from the command line
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends wmctrl libreoffice-writer && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends telnet && \
     apt-get clean; rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /app /tmp/.X11-unix/ && chmod 1777 /tmp/.X11-unix/  /var/lib/apt/lists/
