--- a/wheezy/docker-compose.yml
+++ b/wheezy/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     # user: '1200'
     ports:
       - "8081:8080"
-      - "6333:6333"
+      - "${agent_port}:${agent_port}"
     working_dir: /home/elexis
     # We want silently kill the docker after an hour
     entrypoint: '/app/create_elexis_user.sh'
