Update docker to be base on Debian wheezy 7:11 as 0.4

--- a/wheezy/docker-compose.yml
+++ b/wheezy/docker-compose.yml
@@ -49,7 +49,8 @@ services:
       POSTGRES_PASSWORD: elexisTestPassword
 
   jenkinstest:
-    build: .
+    # build: .
+    image: ngiger/jubula_runner:${JUBULA_RUNNER_VERSION}
     networks:
       private:
       public:
